# Portable-Calculator-GUI

./: CMakeLists.txt  LICENSE  README.md  Resources.qrc
CPP/include/: BorderLayout.h  ControlledView.h  Pages.h
CPP/include/Components/: QParagraph.h  QSidebar.h  QTabTracker.h  QToolBar.h
CPP/src/: BorderLayout.cpp  ControlledView.cpp  Pages.cpp  Run.cpp
CPP/src/Components/: QParagraph.cpp  QSidebar.cpp  QTabTracker.cpp  QToolBar.cpp
Include/: ControlView.h  QUpdater.h
Include/CustomComponent/: QPage.h  QParagraph.h  QSidebar.h  QTabTracker.h
Include/Python/: PSyntaxHighlighter.h
include/: ControllerScreen.h  Views.h
include/CentralViews/: Expectations.h  Home.h  Search.h  Settings.h
include/CustomLayouts/: BorderLayout.h  QScreenLayout.h  QSideBar.h  QToolBar.h
include/CustomWidgets/: QBarWidget.h  QParagraph.h  QTitle.h  Sidebar.h  TabTracker.h
src/: ControllerScreen.cpp  QUpdater.cpp  main.cpp
src/CustomComponent/: QParagraph.cpp
src/CustomLayout/: BorderLayout.cpp
src/CustomLayouts/: BorderLayout.cpp
src/CustomWidgets/: QParagraph.cpp  Sidebar.cpp  TabTracker.cpp
